# File-Compressor

./: .gitignore  CMakeLists.txt
include/: compression_algorithm.h  compressor.h  huffman.h  logger.h  lz77.h  rle.h
src/: compressor.cpp  huffman.cpp  logger.cpp  lz77.cpp  main.cpp  rle.cpp
